[project]
name = "pharma-papers"
version = "0.1.0"
description = "A CLI program to fetch PubMed papers and filter by non-academic affiliations."
authors = [
    {name = "Yashwanth",email = "kumaryashwanth198@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "biopython >=1.85",
    "pandas >=2.0.0",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"

